# FlareChessEngine

./: .gitignore  CMakeLists.txt  README.md  run_local.sh
engine/: CMakeLists.txt
engine/src/: attack.cpp  attack.h  bitboard.h  eval.cpp  eval.h  fen.cpp  fen.h  main.cpp  move.h  movegen.cpp  movegen.h  perft.cpp  perft.h  position.cpp  position.h  search.cpp  search.h  transposition_table.cpp  transposition_table.h  types.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
engine/tests/: test_main.cpp
web/: go.mod  main.go
web/static/: app.js  index.html  style.css
